# renton

./: README.md  pyproject.toml
src/: main.py
src/data/: data.parquet  html.txt  results.csv
src/helpers/: __init__.py  decorators_.py  to_parquet.py  utils.py
